--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.6",
-    "react": "^15.1.0"
+    "react": "^15.1.0",
+    "babel": "^5.8.38"
   }
 }
