--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
+click==6.6
+dominate==2.3.1
 Flask==0.10.1
+Flask-Bootstrap==3.3.7.0
+Flask-OAuthlib==0.9.3
+itsdangerous==0.24
+Jinja2==2.8.1
+MarkupSafe==0.23
+oauthlib==2.0.1
+requests==2.12.4
+requests-oauthlib==0.7.0
+virtualenv==15.1.0
+visitor==0.1.3
+Werkzeug==0.11.15
