--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "babel-preset-react": "^6.16.0",
-    "bower": "^1.8.0"
+    "bower": "^1.8.0",
+    "requirejs": "^2.3.2"
   }
 }
