--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+click==6.6
+dominate==2.3.1
 Flask==0.10.1
+Flask-Assets==0.12
+Flask-Bootstrap==3.3.7.0
+Flask-OAuthlib==0.9.3
 itsdangerous==0.24
-Jinja2==2.8
+Jinja2==2.8.1
 MarkupSafe==0.23
-Werkzeug==0.10.4
-wheel==0.24.0
+oauthlib==2.0.1
+requests==2.12.4
+requests-oauthlib==0.7.0
+virtualenv==15.1.0
+visitor==0.1.3
+webassets==0.12.1
+Werkzeug==0.11.15
