--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ Flask==0.10.1
 Flask-Assets==0.12
 Flask-Bootstrap==3.3.7.0
 Flask-OAuthlib==0.9.3
+Flask-SQLAlchemy==2.1
 itsdangerous==0.24
 Jinja2==2.8.1
 MarkupSafe==0.23
 oauthlib==2.0.1
 requests==2.12.4
 requests-oauthlib==0.7.0
+SQLAlchemy==1.1.4
 virtualenv==15.1.0
 visitor==0.1.3
 webassets==0.12.1
