--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ dominate==2.3.1
 Flask==0.10.1
 Flask-Assets==0.12
 Flask-Bootstrap==3.3.7.0
+flask-heroku==0.1.9
 Flask-OAuthlib==0.9.3
 Flask-SQLAlchemy==2.1
+gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8.1
 MarkupSafe==0.23
 oauthlib==2.0.1
+psycopg2==2.6.2
 requests==2.12.4
 requests-oauthlib==0.7.0
 SQLAlchemy==1.1.4
