--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==0.8.10
 click==6.6
 dominate==2.3.1
 Flask==0.10.1
@@ -9,12 +10,16 @@ Flask-SQLAlchemy==2.1
 gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8.1
+Mako==1.0.6
 MarkupSafe==0.23
 oauthlib==2.0.1
 psycopg2==2.6.2
+python-editor==1.0.3
+redshift-sqlalchemy==0.4.1
 requests==2.12.4
 requests-oauthlib==0.7.0
 SQLAlchemy==1.1.4
+sqlparse==0.2.2
 virtualenv==15.1.0
 visitor==0.1.3
 webassets==0.12.1
