--- a/requirements.txt
+++ b/requirements.txt
@@ -5,21 +5,31 @@ Flask==0.10.1
 Flask-Assets==0.12
 Flask-Bootstrap==3.3.7.0
 flask-heroku==0.1.9
+Flask-OAuth==0.12
 Flask-OAuthlib==0.9.3
 Flask-SQLAlchemy==2.1
+google-api-python-client==1.6.1
 gunicorn==19.6.0
+httplib2==0.9.2
 itsdangerous==0.24
 Jinja2==2.8.1
 Mako==1.0.6
 MarkupSafe==0.23
+oauth2==1.9.0.post1
+oauth2client==4.0.0
 oauthlib==2.0.1
 psycopg2==2.6.2
+pyasn1==0.1.9
+pyasn1-modules==0.0.8
 python-editor==1.0.3
 redshift-sqlalchemy==0.4.1
 requests==2.12.4
 requests-oauthlib==0.7.0
+rsa==3.4.2
+six==1.10.0
 SQLAlchemy==1.1.4
 sqlparse==0.2.2
+uritemplate==3.0.0
 virtualenv==15.1.0
 visitor==0.1.3
 webassets==0.12.1
