--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "file-loader": "^0.9.0",
     "http-server": "^0.8.5",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   },
